--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ header {
 <body>
     <div class="dashboard">
         <header>
-            <h1>Employee Task Management</h1>
+            <h1>ATS Employee Task Management</h1>
         </header>
 
         <div class="main-content">
